# mini_http_server

./: .gitignore  CMakeLists.txt  README.md  readme.md
include/: httpserver.h  main.h  tools.h
src/: httpserver.c  main.c  tools.c
test/: test.c
